force-app/main/default/objects/public_servicedefinition__x/public_servicedefinition__x.object-meta.xml
<CustomObject>
    <description>public$servicedefinition</description>
    <externalDataSource>Remote_Compute_Results</externalDataSource>
    <externalName>public$servicedefinition</externalName>
    <label>Remote Service Definition</label>
    <pluralLabel>Remote Service Definitions</pluralLabel>
</CustomObject>