force-app/main/default/objects/public_servicedefinition__x/fields/servicedescription__c.field-meta.xml
<CustomField>
    <fullName>servicedescription__c</fullName>
    <description>servicedescription</description>
    <externalDeveloperName>servicedescription</externalDeveloperName>
    <label>Service Description</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>