force-app/main/default/objects/public_servicedefinition__x/fields/servicelabel__c.field-meta.xml
<CustomField>
    <fullName>servicelabel__c</fullName>
    <description>servicelabel</description>
    <externalDeveloperName>servicelabel</externalDeveloperName>
    <label>Service Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>