force-app/main/default/objects/public_servicedefinition__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>servicelabel__c</columns>
    <columns>servicedescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>